# docs/swagger.yaml
@@ -13,6 +13,15 @@ definitions:
       sort_order:
         type: integer
     type: object
+  dto.CapsuleResponse:
+    properties:
+      id:
+        type: string
+      message:
+        type: string
+      nickname:
+        type: string
+    type: object
   dto.ErrorResponse:
     properties:
       error:
@@ -107,6 +116,48 @@ paths:
       summary: 아바타 조회
       tags:
       - avatars
+  /capsules:
+    post:
+      description: 캡슐의 메시지를 작성합니다.
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.CapsuleResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 캡슐 메시지 1개 작성
+      tags:
+      - capsules
+  /capsules/draw:
+    post:
+      description: 아직 뽑히지 않은 캡슐 중 하나를 랜덤으로 뽑아 메시지와 작성자 닉네임을 반환합니다.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CapsuleResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: 캡슐 1개 랜덤 뽑기
+      tags:
+      - capsules
   /login:
     post:
       consumes:
